@@ -1,4 +1,8 @@
-[B]Version 2.0.0[/B]
+[B]Version 2.1.0[/B]
+- A custom User-Agent string setting.
+- Update default User-Agent to bypass streaming block.
+
+[B]Version 2.0.1[/B]
 - Fix channel listing error
 
 [B]Version 2.0.0[/B]
